# stroud-weather-monitor

./: .gitignore  Cargo.toml  Makefile  Pipfile  README.md  pyproject.toml  samconfig.toml  template.yaml
.circleci/: config.yml
src/: main.rs
tests/fixtures/: event.txt
