[package]
name = "lora-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.7.3"
lambda_runtime = "0.7.3"
aws-config = "0.54.1"
serde = "1.0.155"
serde_json = "1.0.94"
serde_derive = "1.0.155"
log = "0.4.17"
simple_logger = "1.16.0"
tokio = { version = "1.26.0", features = ["full"] }
